/*
 *  Copyright (c) 2016, https://github.com/nebula-im
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "authorization_service";
option java_outer_classname = "ZProtoAuthorizationService";
option optimize_for = CODE_SIZE;
option go_package = "authorization";


package mtproto;

message AuthSingUpRequest {
  double balance = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
  string password = 5;
  string email = 6;
  string type = 7;
  string profile = 8;
  string gender = 9;
}

message AuthSingInRequest {
  string user_name = 1;
  string password = 2;
}

message AuthSingUpRsp {
  int64 data = 1;
}

message AuthSingInRsp {
  int64 data = 1;
}

service RPCAuthorization {
  rpc auth_singIN(AuthSingInRequest) returns (AuthSingInRsp);
  rpc auth_singUP(AuthSingUpRequest) returns (AuthSingUpRsp);
}
